Aligned java implementations, updated java version to 25.0.1